--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.37.8",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
